@@ -1,6 +1,0 @@
-SUBDIRS = 								\
-		bitlocker						\
-		filesystems						\
-		partition_system_apm					\
-		partition_system_dos					\
-		partition_system_gpt
